<resources>
    <string name="app_name">CiceroAR</string>
    <string name="start_button">Get Started</string>
    <string name="camera_button">Camera</string>
    <string name="upload_button">Upload</string>
    <string name="cancel_button">Cancel</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>

    <string name="image_preview_description">Image containing the preview of the captured image</string>
    <string name="ar_image_container">Image View containing the detail to display in AR</string>
    <string name="play_button_description">Button containing the play/stop functionalities</string>
</resources>
